[tool.poetry]
name = "garden_project"
version = "0.1.0"
description = ""
authors = ["Erik Wiffin <erik.wiffin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.5"
gpiozero = "^1.5.1"
board = "^1.0"
adafruit-circuitpython-dht = "^3.2.6"
"RPi.GPIO" = "^0.7.0"
flask-sqlalchemy = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
